--- a/Framer-Potfolio-Website/index.html
+++ b/Framer-Potfolio-Website/index.html
@@ -47,7 +47,7 @@
         </header>
 
               <!-- Hero Section -->
-              <section class="mb-20">
+              <section id="about"class="mb-20">
                 <div class="flex flex-col md:flex-row items-center justify-between">
                     <div class="space-y-4 text-center md:text-left mb-8 md:mb-0">
                         <h2 class="text-4xl md:text-5xl font-bold gradient-text">Hi there! 👋<br>I'm Tomas</h2>
@@ -109,7 +109,7 @@
             </section>
     
             <!-- GitHub Projects -->
-            <section id="github" class="mb-20">
+            <section id="projects" class="mb-20">
                 <div class="flex justify-between items-center mb-8">
                     <h3 class="text-2xl font-medium">Top Projects</h3>
                     <a href="https://github.com/MaxterDuck?tab=repositories" target="_blank" 
